// ./proto/product/product.proto

syntax = "proto3";

option go_package = "github.com/bpremika/post";

// LendingPost message representing the structure of the LendingPost object
message LendingPost {
    uint64 id = 1;           
    string item_name = 2;     
    string description = 3;  
    double price = 4;         
    bool active_status = 5;   
    string image_url = 6;     
    string owner_id = 7;      
    string created_at = 8;    
    string updated_at = 9;    
    string deleted_at = 10;   
  }
  
// Request message for creating a new LendingPost
message CreateLendingPostRequest {
    string item_name = 1;     // Required: Name of the item
    string description = 2;   // Optional: Description of the item
    double price = 3;         // Required: Price of the item
    bool active_status = 4;   // Required: Active status of the post
    string image_url = 5;     // Required: URL of the image for the item
    string owner_id = 6;      // Required: ID of the owner (can be a UUID)
}

// Response message for the CreateLendingPost service
message CreateLendingPostResponse {
    uint64 id = 1;            // The autogenerated ID of the created post
    string message = 2;       // A success message or error details
}

message GetLendingPostDetailRequest {
    uint64 id = 1;
}

message GetLendingPostDetailResponse {
    uint64 id = 1;           
    string item_name = 2;     
    string description = 3;  
    double price = 4;         
    bool active_status = 5;   
    string image_url = 6;     
    string owner_id = 7; 
    string updated_at = 8;         
}

message SearchLendingPostRequest {
    string searchString = 1;
}


service LendingPostService {
// RPC method to create a new LendingPost
    rpc CreateLendingPost(CreateLendingPostRequest) returns (CreateLendingPostResponse) {}
    rpc GetLendingPostDetail(GetLendingPostDetailRequest) returns (CreateLendingPostResponse) {}
}